--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="ZSmart, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
+      content="XUM, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
     />
     <meta name="description" content="A Demo cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>logo-1.png" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <title>ZSmart</title>
+    <title>XUMExchange</title>
     <style>
       .page-loading {
         position: fixed;
