--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="A Demo cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="theme-color" content="#0e182b">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>ZSmart</title>
