Fix changed contact details

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="XUM, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
+      content="XUMExchange, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
     />
     <meta name="description" content="A Demo cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>logo-1.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/public/EventicaTest">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>XUMExchange</title>
     <style>
