Modified titlebar text

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="SmartChainers, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
+      content="XUM, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
     />
     <meta name="description" content="A Demo cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#0e182b">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <title>SmartChainers</title>
+    <title>XUM Exchange</title>
     <style>
       .page-loading {
         position: fixed;
