Fix mobile trade page, user screen add support recaptcha

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
         }
       }
     </style>
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
   </head>
   <body>
     <div id="body-content"></div>
