--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="keywords"
       content="XUM, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
     />
-    <meta name="description" content="A Demo cryptocurrency exchange" />
+    <meta name="description" content="The Cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="theme-color" content="#0e182b">
