index.html changed

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="XUM, exchange, cryptocurrency, build own cryptocurrency exchange, sàn giao dịch, the exchange, bitcoin, btc, eth, etc"
+      content="XUM, exchange, cryptocurrency, the exchange, bitcoin, btc, eth, etc"
     />
     <meta name="description" content="The Cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
