--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>XUM Exchange</title>
+    <!-- Global site tag (gtag.js) - Google Analytics --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1X4SC3RC35"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-1X4SC3RC35'); 
+    </script>
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
   </head>
   <body>
