--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta
       name="keywords"
-      content="XUM, exchange, cryptocurrency, the exchange, bitcoin, btc, eth, etc"
+      content="ZSmartex, exchange, cryptocurrency, the exchange, bitcoin, btc, eth, etc"
     />
     <meta name="description" content="The Cryptocurrency exchange" />
     <meta name="author" content="Hữu Hà" />
@@ -14,9 +14,7 @@
     <meta name="theme-color" content="#0e182b">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <title>XUM Exchange</title>
-    <!-- Global site tag (gtag.js) - Google Analytics --> 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1X4SC3RC35"></script>
+    <title>ZSmartex Exchange</title>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
